...
    <string name="navigation_drawer_close"
        translatable="false">Close navigation drawer</string>

    <string name="api_key" translatable="false">4910f098be51f2bea56f920eff28f314</string>
    <string name="moscow_name">Moscow</string>

    <string name="menu_tools">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_weather">Weather</string>

    <string name="about_title">\"The weather\" application</string>
    <string name="about_descr">This application will show you the weather.\n
    It was written within the framework of the project \"Mobilization\" by Yandex</string>
...
    <string name="about_version">Version number: %s</string>

    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="last_update">Last update at: %s</string>
    <string name="updating_interval">Updating interval</string>
    <string name="n_min">%d min</string>

    <string name="wind">%d m/s</string>
    <string name="percent" translatable="false">%d %%</string>

    <string name="main_tempr" translatable="false">%d °C</string>
    <string name="min_tempr" translatable="false">Min: %d °C</string>
...
