<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center_horizontal"
    android:gravity="top|center_horizontal"
    android:padding="@dimen/margin_small">

    <ImageView
        android:id="@+id/yandex_logo"
        android:layout_width="@dimen/city_selection_yandex_logo_width"
        android:layout_height="@dimen/city_selection_yandex_logo_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_small"
        android:src="@drawable/yandex_logo_trans"/>

    <ProgressBar
        android:id="@+id/autocomplete_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yandex_logo"
        android:layout_marginTop="@dimen/margin_small"
        android:indeterminateOnly="true"
        android:visibility="invisible"/>

    <AutoCompleteTextView
        android:id="@+id/autocomplete_cities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/autocomplete_progress"
        android:hint="@string/city_autocomplete_hint"
        android:imeOptions="flagNoExtractUi"
        android:inputType="textCapSentences"
        android:scrollbars="vertical"
        android:layout_marginTop="@dimen/margin_tiny"/>

    <TextView
        android:id="@+id/autocomplete_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/yandex_logo"
        android:padding="@dimen/margin_small"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_marginTop="@dimen/margin_tiny"/>
</RelativeLayout>